# first-bitbake-project

./: meson.build
inc/: shapes.hpp
src/: main.cpp  shapes.cpp
